--- a/front/src/app/datatables/messages-datatable/messages-datatable.component.css
+++ b/front/src/app/datatables/messages-datatable/messages-datatable.component.css
@@ -3,7 +3,69 @@
 }
 
 ::ng-deep .datatable-header-inner {
-    background-color: #afc2c8 !important;
-    color: #f8fdff !important;
+    background-color: #ffffff !important;
+    color: #222222 !important;
+    border-bottom: 2px solid #000;
     font-size: 1.2em !important;
+}
+
+::ng-deep .ngx-datatable.bootstrap .datatable-body .datatable-body-row {
+    border: 0px !important;
+}
+
+.datatable {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+}
+
+.datatable>thead>tr>th {
+    border-bottom: 2px solid #cacaca;
+    background-color: #fdfdfd;
+    color: #222222;
+    font-size: 1rem;
+    padding: 10px;
+}
+
+.datatable>tbody>tr {
+    height: 45px;
+    cursor: pointer;
+}
+
+.datatable>tbody>tr:nth-child(odd) {
+    background-color: #f8f8f8;
+
+}
+
+.datatable>tbody>tr:nth-child(even) {
+    background-color: #fbfbfb4a;
+}
+
+tr.content-tr:hover {
+    border: 1px solid #e1e1e1;
+    box-shadow: #696969 -1px 1px 2px 0px;
+    background: #f5f5f5 !important;
+}
+
+.datatable>tbody>tr>td {
+    padding: 10px;
+}
+
+.chevron {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 0.25em;
+    vertical-align: middle;
+    border: 4px solid transparent;
+    border-top-color: #000;
+    transition: transform 0.3s ease-in-out;
+}
+
+.chevron.descending {
+    transform: rotate(180deg);
+}
+
+.table-header th {
+    cursor: pointer;
 }
