--- a/front/src/app/datatables/messages-datatable/messages-datatable.component.html
+++ b/front/src/app/datatables/messages-datatable/messages-datatable.component.html
@@ -1,80 +1,44 @@
 <div class="container" style="margin-top: 10px;">
     <div class="row">
-        <div class="col-md-12">
-            <h3 class="text-info">Messages envoyés ({{totalItems}})</h3>
-        </div>
-        <br />
-        <hr />
-        <br />
-        Dans cette section, vous retrouveriez tous les messages que vous avez envoyés aux utilisateurs du DFM.
-        <br />
-        <ngx-datatable 
-        #table
-        [rows]="rows" 
-        [columns]="columns" 
-        class="bootstrap"
-        [columnMode]="ColumnMode.force" 
-        [footerHeight]="50" 
-        rowHeight="auto"
-        [count]="totalItems"
-        [externalPaging]="true"
-        [externalSorting]="true"
-        [limit]="nbItemPerPage"
-        [messages]="{emptyMessage: emptyMessage}"
-        [sorts]="[{prop: 'SendAt', dir: 'desc'}]"
-        (sort)="onSort($event)"
+        <table class="datatable">
+            <caption>{{totalItems}} Messages</caption>
+            <thead>
+                <tr class="table-header">
+                    <th *ngFor="let column of columns" (click)="sortColumn(column.prop)">
+                        {{column.label}}
+                        <i class="fa-solid {{column.class}}" aria-hidden="true"></i>
+                    </th>
 
-        > 
-            <ngx-datatable-column name="Envoyé le" prop="SendAt" [maxWidth]="200">
-                <ng-template let-column="column" ngx-datatable-header-template>{{ column.name }}</ng-template>
-                <ng-template let-row="row" ngx-datatable-cell-template>
-                    {{ row.SendAt }}
-                </ng-template>
-            </ngx-datatable-column>
-
-            <ngx-datatable-column name="Contenu" prop="Content">
-                <ng-template let-column="column" ngx-datatable-header-template>{{ column.name }}</ng-template>
-                <ng-template let-row="row" ngx-datatable-cell-template>
-                    {{ row.Content| slice:0:90 }}...
-                </ng-template>
-            </ngx-datatable-column>
-
-            <ngx-datatable-column [resizeable]="true" [maxWidth]="170" name="Envoyé à" prop="To">
-                <ng-template let-column="column" ngx-datatable-header-template>{{ column.name }}</ng-template>
-                <ng-template let-row="row" ngx-datatable-cell-template>
-                    {{ row.To }}
-                </ng-template>
-            </ngx-datatable-column>
-
-            <ngx-datatable-column name="Action" [maxWidth]="120" >
-                <ng-template let-column="column" ngx-datatable-header-template>Action</ng-template>    
-                <ng-template let-row="row" let-expanded="expanded" ngx-datatable-cell-template>    
-                    <div class="text-left">    
-                        <a title="Edit" class="mr-2" href="javascript:void(0);">Edit</a>    
-                        <a title="Delete" href="javascript:void(0);"    
-                        >Delete</a>    
-                    </div>    
-                </ng-template>    
-            </ngx-datatable-column> 
-            <ngx-datatable-footer>
-                <ng-template
-                  ngx-datatable-footer-template
-                  let-rowCount="rowCount"
-                  let-pageSize="pageSize"
-                  let-selectedCount="selectedCount"
-                  let-curPage="curPage"
-                  let-offset="offset"
-                >
-                  <div style="padding: 5px 10px">
-                      Total: {{ rowCount }} | Page actuelle:
-                      {{ curPage }} | Offset: {{ offset }}
-                  </div>
-                </ng-template>
-              </ngx-datatable-footer>
-        </ngx-datatable>
+                    <!--<th (click)="sortColumn('createdAt')">
+                        Date <i class="fa fa-sort" aria-hidden="true" [class.descending]="currentSortColumn === 'date' && currentSortOrder === 'desc'"></i>
+                    </th>
+                    <th (click)="sortColumn('content')">
+                        Contenu <i class="fa fa-sort" aria-hidden="true" [class.descending]="currentSortColumn === 'content' && currentSortOrder === 'desc'"></i>
+                    </th>
+                    <th (click)="sortColumn(type !== 'inbox' ? 'recipient' : 'sender')">
+                        {{ type !== 'inbox' ? 'Destinataire' : 'Expéditeur' }}
+                        <i class="fa fa-sort" aria-hidden="true" [class.descending]="currentSortColumn === (type !== 'inbox' ? 'recipient' : 'sender') && currentSortOrder === 'desc'"></i>
+                    </th>-->
+                </tr>
+            </thead>
+            <tbody [@filterAnimation]="totalItems">
+                <tr *ngFor="let message of rows" (click)="accessToMessage(message)" class="content-tr">
+                    <td>{{ message.createdAt }}</td>
+                    <td>{{ message.content| slice:0:90 }}...</td>
+                    <td>{{ type !== 'inbox' ? message.to : message.from }}</td>
+                </tr>
+            </tbody>
+        </table>
         <div class="flex-1">
-            <p-paginator (onPageChange)="onPageChange($event)" [first]="1" [rows]="nbItemPerPage" [totalRecords]="totalItems" [rowsPerPageOptions]="pageLimitOptions" [showFirstLastIcon]="true"></p-paginator>
-        </div>   
+            <p-paginator 
+                (onPageChange)="onPageChange($event)" 
+                [first]="1" 
+                [rows]="nbItemPerPage" 
+                [totalRecords]="totalItems" 
+                [rowsPerPageOptions]="pageLimitOptions" 
+                [showFirstLastIcon]="true">
+            </p-paginator>
+            </div>
     </div>
 </div>
 <br />
