--- a/front/src/app/messages/messages.component.html
+++ b/front/src/app/messages/messages.component.html
@@ -1,5 +1,36 @@
 <div class="container" id="wrapper">
+    <div class="row col-12 shadow-sm p-3 mb-0 bg-white rounded mt-5">
+        <div class="w-100 text-lg">
+            <h3 class="float-start">
+                <i class="fa fa-inbox" aria-hidden="true"></i>
+                Messagerie
+            </h3>
+        </div>
+    </div>
     <div class="main-card row col-12 shadow-sm p-3 mb-0 bg-white rounded mt-5">
-        <app-messages-datatable></app-messages-datatable>
+        <nav>
+            <div class="nav nav-tabs mb-4" id="nav-tab" role="tablist" style="border-bottom: 1px dashed #e6e6e6">
+                <button class="nav-link active" id="nav-inbox-tab" data-bs-toggle="tab" data-bs-target="#nav-inbox" type="button" role="tab" aria-controls="nav-inbox" aria-selected="true"><i class="pi pi-inbox mr-2"></i> Reçus ({{nbInboxMessages}})</button>
+                <button class="nav-link" id="nav-send-tab" data-bs-toggle="tab" data-bs-target="#nav-send" type="button" role="tab" aria-controls="nav-send" aria-selected="false"><i class="pi pi-send mr-2"></i> Envoyés ({{nbSendedMessages}})</button>
+            </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-inbox" role="tabpanel" aria-labelledby="nav-inbox-tab">
+                <div class="col-md-12">
+                    <h3 class="text-info">Messages reçus</h3>
+                </div>
+                Dans cette section, vous retrouveriez tous les messages que vous avez reçus des aux autres utilisateurs du DFM.
+                <br />
+                <app-messages-datatable (nbMessages)="calculateNbInboxMessages($event)" [type]="'inbox'"></app-messages-datatable>
+            </div>
+            <div class="tab-pane fade" id="nav-send" role="tabpanel" aria-labelledby="nav-send-tab">
+                <div class="col-md-12">
+                    <h3 class="text-info">Messages envoyés</h3>
+                </div>
+                Dans cette section, vous retrouveriez tous les messages que vous avez envoyés aux utilisateurs du DFM.
+                <br />
+                <app-messages-datatable (nbMessages)="calculateNbMessages($event)" [type]="'sent'"></app-messages-datatable>
+            </div>
+        </div>
     </div>
 </div>
